scripts/tests/errors/err_trailing_operator.bu
// Test: missing expression after operator (trailing operator)
// Expected: compile error

var x = 1 +
